[package]
name = "rote"
version = "0.0.0"
license = "Apache-2.0 or MIT"
authors = ["David Kern <david@mju.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rote_macros = { path = "../rote_macros" }
thiserror = "1.0.24"
